--- a/gold-finger-api/pom.xml
+++ b/gold-finger-api/pom.xml
@@ -54,7 +54,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+	
+   <dependency>
+     <groupId>commons-codec</groupId>
+     <artifactId>commons-codec</artifactId>
+     <version>1.13</version>
+   </dependency>
+ </dependencies>
 
 	<build>
 		<plugins>
