--- a/gold-finger-api/src/main/resources/application.properties
+++ b/gold-finger-api/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=gold-finger-api
+
+# 数据库配置
+spring.datasource.url=jdbc:mysql://localhost:3306/maicai_center?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=Zhangzhiyuan123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA 配置
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# 服务器端口
+server.port=8080
