--- a/gold-finger-api/pom.xml
+++ b/gold-finger-api/pom.xml
@@ -54,6 +54,16 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+    		<groupId>com.github.penggle</groupId>
+    		<artifactId>kaptcha</artifactId>
+    		<version>2.3.2</version>
+		</dependency>
+		<dependency>
+    		<groupId>com.github.whvcse</groupId>
+    		<artifactId>easy-captcha</artifactId>
+    		<version>1.6.2</version>
+		</dependency>
 	
    <dependency>
      <groupId>commons-codec</groupId>
